test/syc/bad/inlinegtypedef.c
/*
 * Invalid use of 'inline' with typedef in global scope.
 */

typedef inline int i_t(void);
